tests/standalone-tests/failing/luau-table-iteration.lua
-- this a robox/luau-ism
local a = {"a", "b", "c"}
for k, v in a do
end